    parameter to interpolate NODATA pixels before running the operation.
  - Point variant of ST_SetValue(raster) is now a wrapper around geomval 
    variant of ST_SetValues(rast).
  - Proper support for raster band's isnodata flag in core API and loader.
  - Additional default values for parameters of ST_Aspect and ST_HillShade

* Fixes *

  - #1839, handling of subdatasets in GeoTIFF in raster2pgsql.
  - #1840, fix logic of when to compute # of tiles in raster2pgsql.
  - #1870, align the docs and actual behavior of raster's ST_Intersects
  - #1872, fix ST_ApproxSummarystats to prevent division by zero
  - #1875, ST_SummaryStats returns NULL for all parameters except count
           when count is zero
  - #1932, fix raster2pgsql of syntax for index tablespaces
  - #1936, ST_GeomFromGML on CurvePolygon causes server crash
  - #1939, remove custom data types: summarystats, histogram, quantile, 
           valuecount
  - #1951, remove crash on zero-length linestrings
  - #1957, ST_Distance to a one-point LineString returns NULL 
  - #1976, Geography point-in-ring code overhauled for more reliability
  - #1981, cleanup of unused variables causing warnings with gcc 4.6+
  - #1996, support POINT EMPTY in GeoJSON output
  - #2062, improve performance of distance calculations 
  - #2057, Fixed linking issue for raster2psql to libpq
  - #2077, Fixed incorrect values returning from ST_Hillshade()
  - #2019, ST_FlipCoordinates does not update bbox
  - #2100, ST_AsRaster may not return raster with specified pixel type
  - #2126, Better handling of empty rasters from ST_ConvexHull()

PostGIS 2.0.3
2013/MM/DD

 * Bug Fixes *
  - #2134, Fixed handling of SRS strings as they are passed to GDAL functions

PostGIS 2.0.2
2012/12/03

 * Bug Fixes *
  - #1287, Drop of "gist_geometry_ops" broke a few clients
           package of legacy_gist.sql for these cases
  - #1391, Errors during upgrade from 1.5
  - #1828, Poor selectivity estimate on ST_DWithin