@@ -1,14 +1,14 @@
 T1|Point[]
 T1B|Point[B]
-T1S|Point[]
+T1S|Point[S]
 T1M|Point[M]
 T1Z|Point[Z]
 T1ZM|Point[ZM]
 T1ZMB|Point[ZMB]
-T1ZMBS|Point[ZMB]
+T1ZMBS|Point[ZMBS]
 T3|MultiPoint[B] with 1 elements
   Point[]
-T4|MultiPoint[B] with 1 elements
+T4|MultiPoint[BS] with 1 elements
   Point[]
 T5|GeometryCollection[B] with 2 elements
   MultiLineString[] with 2 elements
@@ -16,7 +16,7 @@ T5|GeometryCollection[B] with 2 elements
     LineString[] with 2 points
   MultiPoint[] with 1 elements
     Point[]
-T6|GeometryCollection[B] with 2 elements
+T6|GeometryCollection[BS] with 2 elements
   MultiLineString[] with 2 elements
     LineString[] with 2 points
     LineString[] with 2 points
