@@ -112,6 +112,7 @@ PostGIS 2.1.0
     variant of ST_SetValues(rast).
   - Proper support for raster band's isnodata flag in core API and loader.
   - Additional default values for parameters of ST_Aspect and ST_HillShade
+  - #2178, ST_Summary now advertises presence of known srid with an [S] flag
 
 * Fixes *
 
@@ -136,6 +137,7 @@ PostGIS 2.1.0
   - #2019, ST_FlipCoordinates does not update bbox
   - #2100, ST_AsRaster may not return raster with specified pixel type
   - #2126, Better handling of empty rasters from ST_ConvexHull()
+  - #2182, Fix issue with outdb rasters with no SRID and ST_Resize
 
 PostGIS 2.0.3
 2013/MM/DD
